--- a/MonoArk/MonoArk.csproj
+++ b/MonoArk/MonoArk.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="GameProgram.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="MenuOptions.cs" />
