Создал класс ракетки

--- a/MonoArk/MonoArk.csproj
+++ b/MonoArk/MonoArk.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MenuOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Racket .cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
