--- a/MonoArk/MonoArk.csproj
+++ b/MonoArk/MonoArk.csproj
@@ -42,11 +42,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Button.cs" />
+    <Compile Include="GameEssence .cs" />
     <Compile Include="GameProgram.cs" />
+    <Compile Include="IMovable.cs" />
     <Compile Include="MenuOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Racket .cs" />
+    <Compile Include="Racket.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
